// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`{before,after}All + concurrent 1`] = `
"add_hook: beforeAll
add_hook: afterAll
add_test: one
run_start
run_describe_start: ROOT_DESCRIBE_BLOCK
hook_start: beforeAll
hook_success: beforeAll
test_start: one
test_started: one
test_fn_start: one
hello one
test_fn_failure: one
test_done: one
hook_start: afterAll
hook_success: afterAll
run_describe_finish: ROOT_DESCRIBE_BLOCK
run_finish

unhandledErrors: 0"
`;

exports[`concurrent 1`] = `
"start_describe_definition: describe
add_hook: beforeEach
add_hook: afterEach
add_test: one
add_test: two
add_test: three
finish_describe_definition: describe
run_start
run_describe_start: ROOT_DESCRIBE_BLOCK
run_describe_start: describe
test_start: one
test_start: two
test_start: three
test_started: one
test_started: two
test_started: three
test_fn_start: one
test_fn_start: two
test_fn_start: three
hello one
hello two
hello three
test_fn_failure: one
test_fn_success: two
test_fn_success: three
test_done: one
test_done: two
test_done: three
run_describe_finish: describe
run_describe_finish: ROOT_DESCRIBE_BLOCK
run_finish

unhandledErrors: 0"
`;

exports[`concurrent.each 1`] = `
"start_describe_definition: describe
add_hook: beforeEach
add_hook: afterEach
add_test: one
add_test: two
add_test: three
finish_describe_definition: describe
run_start
run_describe_start: ROOT_DESCRIBE_BLOCK
run_describe_start: describe
test_start: one
test_start: two
test_start: three
test_started: one
test_started: two
test_started: three
test_fn_start: one
test_fn_start: two
test_fn_start: three
hello one
hello two
hello three
test_fn_success: one
test_fn_success: two
test_fn_success: three
test_done: one
test_done: two
test_done: three
run_describe_finish: describe
run_describe_finish: ROOT_DESCRIBE_BLOCK
run_finish

unhandledErrors: 0"
`;

exports[`describe + {before,after}All + concurrent 1`] = `
"start_describe_definition: describe
add_hook: beforeAll
add_hook: afterAll
add_test: one
finish_describe_definition: describe
run_start
run_describe_start: ROOT_DESCRIBE_BLOCK
run_describe_start: describe
test_start: one
hook_start: beforeAll
test_started: one
In describe
test_fn_start: one
hello one
test_fn_failure: one
test_done: one
hook_success: beforeAll
hook_start: afterAll
In describe
hook_success: afterAll
run_describe_finish: describe
run_describe_finish: ROOT_DESCRIBE_BLOCK
run_finish

unhandledErrors: 0"
`;

exports[`describe + {before,after}All + concurrent multiple times 1`] = `
"start_describe_definition: describe1
add_hook: beforeAll
add_hook: afterAll
add_test: one
finish_describe_definition: describe1
start_describe_definition: describe2
add_hook: beforeAll
add_hook: afterAll
add_test: two
finish_describe_definition: describe2
run_start
run_describe_start: ROOT_DESCRIBE_BLOCK
run_describe_start: describe1
test_start: one
test_start: two
hook_start: beforeAll
test_started: one
test_started: two
In describe1
test_fn_start: one
test_fn_start: two
hello one
hello two
test_fn_failure: one
test_fn_success: two
test_done: one
test_done: two
hook_success: beforeAll
hook_start: afterAll
In describe1
hook_success: afterAll
run_describe_finish: describe1
run_describe_start: describe2
hook_start: beforeAll
In describe2
hook_success: beforeAll
hook_start: afterAll
In describe2
hook_success: afterAll
run_describe_finish: describe2
run_describe_finish: ROOT_DESCRIBE_BLOCK
run_finish

unhandledErrors: 0"
`;

exports[`describe.skip + concurrent 1`] = `
"start_describe_definition: describe
add_hook: beforeEach
add_hook: afterEach
add_test: one
add_test: two
add_test: three
finish_describe_definition: describe
run_start
run_describe_start: ROOT_DESCRIBE_BLOCK
run_describe_start: describe
test_start: one
test_start: two
test_start: three
test_skip
test_skip
test_skip
run_describe_finish: describe
run_describe_finish: ROOT_DESCRIBE_BLOCK
run_finish

unhandledErrors: 0"
`;

exports[`describe.skip + concurrent.each 1`] = `
"start_describe_definition: describe
add_hook: beforeEach
add_hook: afterEach
add_test: one
add_test: two
add_test: three
finish_describe_definition: describe
run_start
run_describe_start: ROOT_DESCRIBE_BLOCK
run_describe_start: describe
test_start: one
test_start: two
test_start: three
test_skip
test_skip
test_skip
run_describe_finish: describe
run_describe_finish: ROOT_DESCRIBE_BLOCK
run_finish

unhandledErrors: 0"
`;

exports[`failures 1`] = `
"start_describe_definition: describe
add_hook: beforeEach
add_hook: afterEach
add_test: one
add_test: two
finish_describe_definition: describe
run_start
run_describe_start: ROOT_DESCRIBE_BLOCK
run_describe_start: describe
test_start: one
test_started: one
hook_start: beforeEach
hook_success: beforeEach
test_fn_start: one
test_fn_failure: one
hook_start: afterEach
hook_failure: afterEach
test_done: one
test_start: two
test_started: two
hook_start: beforeEach
hook_success: beforeEach
test_fn_start: two
test_fn_success: two
hook_start: afterEach
hook_failure: afterEach
test_done: two
run_describe_finish: describe
run_describe_finish: ROOT_DESCRIBE_BLOCK
run_finish

unhandledErrors: 0"
`;

exports[`function descriptors 1`] = `
"start_describe_definition: describer
add_test: One
finish_describe_definition: describer
run_start
run_describe_start: ROOT_DESCRIBE_BLOCK
run_describe_start: describer
test_start: One
test_started: One
test_fn_start: One
test_fn_success: One
test_done: One
run_describe_finish: describer
run_describe_finish: ROOT_DESCRIBE_BLOCK
run_finish

unhandledErrors: 0"
`;

exports[`nested describe.skip + concurrent 1`] = `
"start_describe_definition: describe
start_describe_definition: nested
add_test: one
add_test: two
add_test: three
finish_describe_definition: nested
finish_describe_definition: describe
run_start
run_describe_start: ROOT_DESCRIBE_BLOCK
run_describe_start: describe
test_start: one
test_start: two
test_start: three
run_describe_start: nested
test_skip
test_skip
test_skip
run_describe_finish: nested
run_describe_finish: describe
run_describe_finish: ROOT_DESCRIBE_BLOCK
run_finish

unhandledErrors: 0"
`;

exports[`simple test 1`] = `
"start_describe_definition: describe
add_hook: beforeEach
add_hook: afterEach
add_test: one
add_test: two
finish_describe_definition: describe
run_start
run_describe_start: ROOT_DESCRIBE_BLOCK
run_describe_start: describe
test_start: one
test_started: one
hook_start: beforeEach
hook_success: beforeEach
test_fn_start: one
test_fn_success: one
hook_start: afterEach
hook_success: afterEach
test_done: one
test_start: two
test_started: two
hook_start: beforeEach
hook_success: beforeEach
test_fn_start: two
test_fn_success: two
hook_start: afterEach
hook_success: afterEach
test_done: two
run_describe_finish: describe
run_describe_finish: ROOT_DESCRIBE_BLOCK
run_finish

unhandledErrors: 0"
`;
